--- a/Breite Light/Light.ufo/lib.plist
+++ b/Breite Light/Light.ufo/lib.plist
@@ -707,6 +707,7 @@
 				<string>a.ss01</string>
 				<string>a.ss02</string>
 				<string>g.ss01</string>
+				<string>n.51</string>
 			</array>
 			<key>type</key>
 			<string>glyphList</string>
